Add ability to create a new ToDoItem from the wear app by voice